fix side-top overflow auto

--- a/app/assets/stylesheets/components/_menu.scss
+++ b/app/assets/stylesheets/components/_menu.scss
@@ -20,7 +20,7 @@
         min-height: 0;
         margin: 2rem;
         text-align: center;
-        overflow: clip;
+        overflow: auto;
 
         a {
             &:first-child {
